syntax = "proto3";

package api;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option go_package = "github.com/nycae/infra-playground/api";

message Location {
  float latitude  = 1;
  float longitude = 2;
}

message City {
  string   name     = 1; 
  Location location = 2;

  google.protobuf.Timestamp founded_in = 3;
};

message FullName {
  string first_name  = 1;
  string last_name   = 2;
  string family_name = 3;
};

message Person {
  FullName name        = 1;
  int32    height      = 2;
  City     residence   = 3;

  google.protobuf.Timestamp birthday = 4;
};

message AgeReport {
  int32 age = 1;

  google.protobuf.Timestamp birthday = 2;
};

message HeightReport {
  int32 height_cm = 1;
  int32 height_ft = 2;
  int32 height_in = 3;
};

message HeightLimits {
  int32 height_max = 1;
  int32 height_min = 2;
};

message ValidationResult {
  bool   is_valid = 1;
  string reason   = 2;
};

service CityManager {
  rpc GetCityAt(Location) returns (City);
  rpc GetRandomCity(google.protobuf.Empty) returns (City); 
};


service AgeManager {
  rpc GetBirthdayOf(FullName) returns (AgeReport);
};

service NameManager {
  rpc Validate(FullName) returns (ValidationResult);
  rpc GetAll(google.protobuf.Empty) returns (stream FullName);
  rpc GetRandom(google.protobuf.Empty) returns (FullName);
};

service HeightGuesser {
  rpc GuessHeight(stream FullName) returns (stream HeightReport);
};

service HeightLimiter {
  rpc GetHeightLimits(google.protobuf.Empty) returns (HeightLimits);
}
